@@ -1,3 +1,10 @@
+2005-04-12  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* configure.ac: Check declarations for basename, ffs, asprintf,
+	vasprintf.
+	* configure: Regenerate.
+	* config.in: Likewise.
+
 2005-04-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (CFILES): Add fopen_unlocked.c.
